fix issue with blgs images not showing

--- a/src/pages/blogs/charitable-outreach-and-community-engagement.mdx
+++ b/src/pages/blogs/charitable-outreach-and-community-engagement.mdx
@@ -1,8 +1,7 @@
 <div id="blog">
 <div className="container">
 # Charitable Outreach and Community Engagement:
-![Charitable Outreach](../../images/blog/3.png)
-
+![Charitable Outreach and Community Engagement](../../images/blog/3.png)
 
 ## Ololade's Achievements and Contributions
 
